--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ h1 {
             backgroundColor: "rgba(0,0,0,0.07)"
         },
         data: {
-            csvURL: url('weekday_sales.csv'),
+            csvURL: 'https://raw.githubusercontent.com/zhangbo1997/zhangbo1997.github.io/master/weekday_sales.csv',
         },
         title: {
             text: "Total Sales Each Day of Week"
@@ -90,7 +90,7 @@ h1 {
             }
         },
         data: {
-            csvURL: url('place_kind_sum_up_df.csv'),
+            csvURL: 'https://raw.githubusercontent.com/zhangbo1997/zhangbo1997.github.io/master/place_kind_sum_up_df.csv',
         },
         plotOptions: {
             series: {
@@ -114,7 +114,7 @@ h1 {
             backgroundColor: "rgba(0,0,0,0.07)"
         },
         data: {
-            csvURL: url('overall_sales.csv'),
+            csvURL: 'https://raw.githubusercontent.com/zhangbo1997/zhangbo1997.github.io/master/overall_sales.csv',
         },
         title: {
             text: "Overall Burger Sales Pattern"
@@ -144,7 +144,7 @@ h1 {
             backgroundColor: "rgba(0,0,0,0.07)"
         },
         data: {
-            csvURL: url('burger_sales.csv'),
+            csvURL: 'https://raw.githubusercontent.com/zhangbo1997/zhangbo1997.github.io/master/burger_sales.csv',
         },
         title: {
             text: "Sales Pattern of Each Burger"
@@ -176,7 +176,7 @@ h1 {
             backgroundColor: "rgba(0,0,0,0.07)"
         },
         data: {
-            csvURL: url('place_sales.csv'),
+            csvURL: 'https://raw.githubusercontent.com/zhangbo1997/zhangbo1997.github.io/master/place_sales.csv',
         },
         title: {
             text: "Sales Pattern in Each Region"
